crates/swc-optimizer/core/src/snapshots/qwik_core__test__destructure_args_colon_props2.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import { component$, useSignal } from "@qwik.dev/core";
export default component$((props) => {
  const { "bind:value": bindValue } = props;
  const test = useSignal(bindValue);
  return <>{test.value}</>;
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_test_component_XXXXXXXXXXXX");
export default /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "test_component_XXXXXXXXXXXX"),
);

=== test.tsx_test_component_XXXXXXXXXXXX.js === (ENTRY)
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
import { _jsxSorted } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
export const test_component_XXXXXXXXXXXX = (props) => {
  const test = useSignal(props["bind:value"]);
  return /* @__PURE__ */ _jsxSorted(_Fragment, null, null, _wrapProp(test), 3, "u6_0");
};

/*
{
  "origin": "test.tsx",
  "name": "test_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_test_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "paramNames": [
    "props"
  ]
}
*/

=== DIAGNOSTICS ===

[]
