crates/swc-optimizer/core/src/snapshots/qwik_core__test__destructure_args_inline_cmp_expr_stmt.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
export default ({ data }: { data: any }) => (
  <div
    data-is-active={data.selectedOutputDetail === "options"}
    onClick$={() => {
      data.selectedOutputDetail = "options";
    }}
  />
);

=== test.js ===
import { _fnSignal } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
const _hf0 = (p0) => p0.data.selectedOutputDetail === "options";
const _hf0_str = 'p0.data.selectedOutputDetail==="options"';
const i_XXXXXXXXXXXX = () => import("./test.tsx_test_div_q_e_click_XXXXXXXXXXXX");
export default (_rawProps) =>
  /* @__PURE__ */ _jsxSorted(
    "div",
    {
      "data-is-active": _fnSignal(_hf0, [_rawProps], _hf0_str),
      "q-e:click": /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "test_div_q_e_click_XXXXXXXXXXXX", [_rawProps]),
    },
    null,
    null,
    2,
    "u6_0",
  );

=== test.tsx_test_div_q_e_click_XXXXXXXXXXXX.js === (ENTRY)
import { _captures } from "@qwik.dev/core";
export const test_div_q_e_click_XXXXXXXXXXXX = () => {
  const _rawProps = _captures[0];
  _rawProps.data.selectedOutputDetail = "options";
};

/*
{
  "origin": "test.tsx",
  "name": "test_div_q_e_click_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_test_div_q_e_click",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_test_div_q_e_click_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "captureNames": [
    "_rawProps"
  ]
}
*/

=== DIAGNOSTICS ===

[]
