crates/swc-optimizer/core/src/snapshots/qwik_core__test__example_1.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import { $, component, onRender } from "@qwik.dev/core";

export const renderHeader = $(() => {
  return <div onClick={$((ctx) => console.log(ctx))} />;
});
const renderHeader = component(
  $(() => {
    console.log("mount");
    return render;
  }),
);

=== test.tsx ===
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_renderHeader_component_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () => import("./test.tsx_renderHeader_XXXXXXXXXXXX");
import { component } from "@qwik.dev/core";
export const renderHeader = /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "renderHeader_XXXXXXXXXXXX");
const renderHeader = component(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "renderHeader_component_XXXXXXXXXXXX"),
);

=== test.tsx_renderHeader_XXXXXXXXXXXX.tsx === (ENTRY)
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_renderHeader_div_onClick_XXXXXXXXXXXX");
export const renderHeader_XXXXXXXXXXXX = () => {
  return (
    <div onClick={/* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "renderHeader_div_onClick_XXXXXXXXXXXX")} />
  );
};

/*
{
  "origin": "test.tsx",
  "name": "renderHeader_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_renderHeader",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_renderHeader_XXXXXXXXXXXX",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false
}
*/

=== test.tsx_renderHeader_div_onClick_XXXXXXXXXXXX.tsx === (ENTRY)
export const renderHeader_div_onClick_XXXXXXXXXXXX = (ctx) => console.log(ctx);

/*
{
  "origin": "test.tsx",
  "name": "renderHeader_div_onClick_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_renderHeader_div_onClick",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_renderHeader_div_onClick_XXXXXXXXXXXX",
  "path": "",
  "extension": "tsx",
  "parent": "renderHeader_XXXXXXXXXXXX",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "paramNames": [
    "ctx"
  ]
}
*/

=== test.tsx_renderHeader_component_XXXXXXXXXXXX.tsx === (ENTRY)
export const renderHeader_component_XXXXXXXXXXXX = () => {
  console.log("mount");
  return render;
};

/*
{
  "origin": "test.tsx",
  "name": "renderHeader_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_renderHeader_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_renderHeader_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false
}
*/

=== DIAGNOSTICS ===

[]
